[gd_scene load_steps=3 format=2]

[ext_resource path="res://Wolfkinematic.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/wolf-front.png" type="Texture" id=2]

[node name="Wolf" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )
region_rect = Rect2( 288, 288, 64, 64 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -15.1639, -9.67398, -21.7889, 0.0794029, -13.8758, 9.46474, 27.5301, 10.0168, 27.7142, -10.5941 )

[node name="Visibility" type="Area2D" parent="."]
light_mask = 6

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Visibility"]
polygon = PoolVector2Array( -6.03017, -62.8604, 60.8692, -89.6201, 143.657, -59.0973, 167.072, -0.560394, 147.002, 60.4853, 62.9598, 88.4994, -4.77582, 74.7014, 11.5309, -0.142273 )
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
